feat(dynamic-metadata): implement retrieving metadata
